test/end-to-end/compile-errors/shared-lambda-errors.crow

main void()
	not-lambda nat = shared 0
	not-shared nat mut() = shared () => 0
	not-future nat shared() = shared () => 0
	mut-param void^ shared(p nat mut[]) = shared x => ()
	mut-return nat mut[]^ shared() = shared () => ()
	()
